cabal-version:  2.2
-- tag::devel-docs-package-properties[]
name:           hasklepias-main
version:        0.28.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       embedded DSL for defining epidemiologic cohorts
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    ChangeLog.md
-- end::devel-docs-package-properties[]

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.9 && <1.1

-- tag::devel-docs-components[]
library
  exposed-modules:
      
      Hasklepias
      Hasklepias.AppUtilities
      Hasklepias.AssessmentIntervals
      Hasklepias.MakeCohortApp
      Hasklepias.AppBuilder.LineFilterApp
      Hasklepias.AppBuilder.ProcessLines.Tests
      
      Hasklepias.Misc
      Hasklepias.Reexports
      Tests.Hasklepias

      -- Monarch 
      Monarch
      Test.Monarch.TestMap
      Test.Monarch.ToOutput
      Test.Monarch.MonarchException
      Test.Monarch.Parse
      Test.Tasty.Monarch
        -- TODO remove or relocate
      Examples.Simple
      
      -- Stype
      Stype
      Stype.Aeson
      Stype.Numeric
      Stype.Numeric.Count
      Stype.Numeric.Continuous
      Stype.Numeric.Censored
      Stype.Categorical
      Stype.Categorical.Binary
      Stype.Categorical.Nominal
      Stype.Tests

      -- Templates
      Templates.Features
      Templates.Tests

      -- Etc
      TestUtils.BuildLargeTestData
      TestUtils.ConstructTestTree
      TestUtils.SessionId
      TestUtils.S3Utils
      TestUtils.TestCases
  other-modules:

      Hasklepias.AppBuilder.ProcessLines.Logic
      Hasklepias.AppBuilder.ProcessLines.Taggers


      Stype.Tests.Aeson
      Stype.Tests.Censored
      Templates.Features.BuildIsEnrolled
      Templates.Features.BuildContinuousEnrollment
      Templates.Features.BuildNofXBase
      Templates.Features.BuildNofX
      Templates.Features.BuildNofXWithGap
      Templates.Features.BuildNofXOrMofYWithGap
      Templates.Features.BuildNofUniqueBegins
      Templates.FeatureReqs
      Templates.TestUtilities

      Test.Monarch.Internal.Map
      Test.Monarch.Internal.Dhall
      Test.Monarch.Internal.EventDataTheory
      Test.Monarch.Internal.Csv
      Test.Monarch.Internal.Atomic
      Test.Monarch.Internal.Utilities

      Tests.AssessmentIntervals

  hs-source-dirs:
      src
  build-depends:
    -- Internal packages
      event-data-theory
    , hasklepias-core
    
    -- External packages
    , aeson
    , amazonka
    , amazonka-s3
    , base >=4.14 && <5
    , Blammo
    , bytestring
    , cassava
    , containers
    , conduit-extra
    , deepseq
    , dhall
    , dhall-csv
    , filepath
    , flow
    , formatting
    , generic-lens
    , gitrev
    , microlens
    , OneTuple
    , optparse-applicative
    , envparse
    , process
    , pretty-simple
    , QuickCheck
    , regex-compat
    , safe
    , semiring-simple
    , split
    , string-interpolate
    , tasty
    , tasty-bench
    , tasty-quickcheck
    , tasty-hunit
    , tasty-silver
    , text
    , time >= 1.11.1
    , tuple
    , vector
    , witherable
    , witch
    , zlib
  default-language: Haskell2010
  build-tool-depends: 
    autoexporter:autoexporter
  default-extensions: 
    DataKinds
    OverloadedStrings
    TupleSections
-- end::devel-docs-components[]

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:
      base
    , base-compat       >=0.10.5 && <0.13
    , doctest           >=0.15   && <0.21
    , hasklepias-main
  ghc-options:      -Wall -threaded
  hs-source-dirs:   test
  default-language: Haskell2010

test-suite hasklepias-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hasklepias-main, base
  default-language: Haskell2010

test-suite stype-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: stype-test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hasklepias-main, base
  default-language: Haskell2010

test-suite templates-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: templates-test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hasklepias-main, base
  default-language: Haskell2010

test-suite monarch-test-suite
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      monarch-test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: 
    hasklepias-main, base, filepath
  default-language: Haskell2010

executable monarch-demo
    main-is:          Main.hs
    build-depends:
        base
        , hasklepias-main
        , tasty
    hs-source-dirs:   monarch-demo
    default-language: Haskell2010

executable lineFilter-demo
    main-is:          Main.hs
    build-depends:
          base
        , hasklepias-main
        , aeson
        , vector
        , tasty
    hs-source-dirs:   lineFilter-demo
    default-language: Haskell2010

benchmark hasklepias
  main-is:       Main.hs
  type:          exitcode-stdio-1.0
  build-depends: 
        base
      , hasklepias-main
  hs-source-dirs: bench
  ghc-options:  "-with-rtsopts=-A32m --nonmoving-gc"
  default-language: Haskell2010
