cabal-version:  2.2


-- tag::devel-docs-package-properties[]
name:           hasklepias-main
version:        0.30.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Brendan Brown, Leah Jackman, David Pritchard
maintainer:     bbrown@targetrwe.com
                ljackman@targetrwe.com
                dpritchard@targetrwe.com
copyright:      (c) Target RWE 2023
category:       Data Science
synopsis:       tools for constructing epidemiological cohorts
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
    ChangeLog.md
-- end::devel-docs-package-properties[]

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-doctest  >=1.0.9 && <1.1

-- tag::devel-docs-components[]
library
  exposed-modules:
      
      Hasklepias
      Tests.Hasklepias
      -- Etc
      TestUtils.BuildLargeTestData
      TestUtils.ConstructTestTree
      TestUtils.SessionId
      TestUtils.S3Utils
      TestUtils.TestCases
  other-modules:
      Hasklepias.CohortApp
      Hasklepias.CohortApp.CohortAppCLI
      Hasklepias.LineFilterApp
      Hasklepias.LineFilterApp.ProcessLines.Logic
      Hasklepias.LineFilterApp.ProcessLines.Taggers
      Hasklepias.LineFilterApp.AppUtilities
      Hasklepias.AssessmentIntervals
      Hasklepias.LineFilterApp.ProcessLines.Tests
      Hasklepias.Reexports

      Tests.AssessmentIntervals

  hs-source-dirs:
      src
  build-depends:
    -- Internal packages
      event-data-theory
    , hasklepias-core
    
    -- External packages
    , base >=4.14 && <5
    , aeson
    -- TODO amazonka is kept purely for legacy code in line filter app
    , amazonka
    , amazonka-s3
    , aws
    , Blammo
    , bytestring
    , cassava
    , containers
    , conduit
    , conduit-extra
    , deepseq
    , dhall < 1.42.0
    , dhall-csv
    , directory
    , filepath
    , flow
    , formatting
    , generic-lens
    , gitrev
    , http-conduit
    , ini
    , microlens
    , OneTuple
    , optparse-applicative
    , envparse
    , process
    , pretty-simple
    , QuickCheck
    , regex-compat
    , resourcet
    , safe
    , semiring-simple
    , split
    , string-interpolate
    , tasty
    , tasty-bench
    , tasty-quickcheck
    , tasty-hunit
    , tasty-silver
    , text
    , time >= 1.11.1
    , transformers
    , tuple
    , unordered-containers
    , vector
    , witherable
    , witch
    , zlib
  default-language: Haskell2010
  build-tool-depends: 
    autoexporter:autoexporter
  default-extensions: 
    DataKinds
    OverloadedStrings
    TupleSections
-- end::devel-docs-components[]

test-suite doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  build-depends:
      base
    , base-compat       >=0.10.5 && <0.13
    , doctest           >=0.15   && <0.21
    , hasklepias-main
  ghc-options:      -Wall -threaded
  hs-source-dirs:   test
  default-language: Haskell2010

test-suite hasklepias-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hasklepias-main, base
  default-language: Haskell2010

executable lineFilter-demo
    main-is:          Main.hs
    build-depends:
          base
        , hasklepias-main
        , aeson
        , vector
        , tasty
    hs-source-dirs:   lineFilter-demo
    default-language: Haskell2010

benchmark hasklepias
  main-is:       Main.hs
  type:          exitcode-stdio-1.0
  build-depends: 
        base
      , hasklepias-main
  hs-source-dirs: bench
  ghc-options:  "-with-rtsopts=-A32m --nonmoving-gc"
  default-language: Haskell2010
