cabal-version:  >= 1.10
name:           hasklepias
version:        0.1.0
description:    Please see the README on GitHub at <https://github.com/bsaul/hasklepias#readme>
homepage:       https://github.com/bsaul/hasklepias#readme
bug-reports:    https://github.com/bsaul/hasklepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/bsaul/hasklepias

library
  exposed-modules:
      Hasklepias
      Hasklepias.Features
      Hasklepias.IntervalOperations
      Hasklepias.Types
      Hasklepias.Types.Context
      Hasklepias.Types.Event
      Hasklepias.Types.Event.Aeson
      Hasklepias.Types.Event.Examples
  other-modules:
      Paths_hasklepias
  hs-source-dirs:
      src
  build-depends:
      aeson >=1.4.0.0 && <2
    , base >=4.14 && <4.15
    , bytestring >=0.10
    , containers >=0.6.0
    , interval-algebra >=0.1.2
    , text >=1.2.3
    , time >=1.9
    , unordered-containers >=0.2.10
    , vector >=0.12
  default-language: Haskell2010

executable hasklepias-exe
  main-is: Main.hs
  other-modules:
      Paths_hasklepias
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson >=1.4.0.0 && <2
    , base >=4.14 && <4.15    
    , bytestring >=0.10
    , containers >=0.6.0
    , interval-algebra >=0.1.2
    , text >=1.2.3
    , time >=1.9
    , unordered-containers >=0.2.10
    , vector >=0.12
  default-language: Haskell2010

test-suite hasklepias-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Hasklepias.FeaturesSpec
      Hasklepias.IntervalOperationsSpec
      Hasklepias.Types.ContextSpec
      Hasklepias.Types.Event.AesonSpec
      Hasklepias.Types.EventSpec
      Paths_hasklepias
  hs-source-dirs:
      test
  -- ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson >=1.4.0.0 && <2
    , base >=4.7 && <5
    , bytestring >=0.10
    , containers >=0.6.0
    , hasklepias
    , hspec
    , interval-algebra >=0.1.2
    , text >=1.2.3
    , time >=1.9
    , unordered-containers >=0.2.10
    , vector >=0.12
  default-language: Haskell2010
