cabal-version:      2.4
name:               hygiea
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Cohort test-building interface for asclepias.

-- A longer description of the package.
-- description: 

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             bbrown
maintainer:         bbrown@targetrwe.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    planning.adoc

library
    exposed-modules:  
        Test.Hygiea.TestMap
        , Test.Hygiea.ToOutput
        , Test.Hygiea.HygieaException
        , Test.Hygiea.Parse
        , Test.Tasty.Hygiea
        -- TODO remove or relocate
        , Examples.Simple

    -- Modules included in this library but not exported.
    other-modules: 
        Test.Hygiea.Internal.Map
        , Test.Hygiea.Internal.Dhall
        , Test.Hygiea.Internal.EventDataTheory
        , Test.Hygiea.Internal.Csv
        , Test.Hygiea.Internal.Atomic
        , Test.Hygiea.Internal.Utilities

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        -- upper bound from filepath package
        base ^>=4.14.1.0
        , witch
        -- NOTE: edm module fixes interval-algebra version
        -- though hygiea does not depend on edm at all, cabal seems to think
        -- its dependencies must be consistent.  
        , interval-algebra
        , containers
        , text
        , dhall
        , dhall-csv
        , cassava
        , tasty
        , aeson
        , filepath
        , tasty-silver 
        , bytestring
        , event-data-theory
    hs-source-dirs:   src
    default-language: Haskell2010

executable demo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
        , hygiea == 0.1.0.0
        , tasty

    hs-source-dirs:   app
    default-language: Haskell2010
