cabal-version:      2.4
name:               monarch
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Cohort test-building interface for asclepias, currently a prototype.

-- A longer description of the package.
-- description: 

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             bbrown
maintainer:         bbrown@targetrwe.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.adoc
    planning.adoc

library
    ghc-options:
      -Wall

    exposed-modules:  
        Monarch
        , Test.Monarch.TestMap
        , Test.Monarch.ToOutput
        , Test.Monarch.MonarchException
        , Test.Monarch.Parse
        , Test.Tasty.Monarch
        -- TODO remove or relocate
        , Examples.Simple

    -- Modules included in this library but not exported.
    other-modules: 
        Test.Monarch.Internal.Map
        , Test.Monarch.Internal.Dhall
        , Test.Monarch.Internal.EventDataTheory
        , Test.Monarch.Internal.Csv
        , Test.Monarch.Internal.Atomic
        , Test.Monarch.Internal.Utilities

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        -- upper bound from filepath package
        base ^>=4.14.1.0
        , witch
        -- NOTE: edm module fixes interval-algebra version
        -- though monarch does not depend on edm at all, cabal seems to think
        -- its dependencies must be consistent.  
        , interval-algebra
        , containers
        , text
        , dhall
        , dhall-csv
        , cassava
        , tasty
        , aeson
        , filepath
        , tasty-silver 
        , bytestring
        , event-data-theory
    hs-source-dirs:   src
    default-language: Haskell2010

executable demo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
        , monarch
        , tasty

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite monarch-test-suite
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: monarch, base, filepath
  default-language: Haskell2010
