cabal-version:  2.2
name:           stype 
version:        0.20.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       Statistical types
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      Stype
      Stype.Aeson
      Stype.Numeric
      Stype.Numeric.Count
      Stype.Numeric.Continuous
      Stype.Numeric.Censored
      Stype.Categorical
      Stype.Categorical.Binary
      Stype.Categorical.Nominal
  hs-source-dirs:
      src
  build-depends:
      aeson >=1.4.0.0 && <2
    , base >=4.14 && <4.15
    , bytestring == 0.10.12.0
    , semiring-simple == 1.0.0.1
    , text == 1.2.4.1
  default-language: Haskell2010

test-suite stype-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Stype.AesonSpec
      Stype.Numeric.CensoredSpec
      Paths_stype
  autogen-modules:
      Paths_stype
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      stype
    , aeson >=1.4.0.0 && <2
    , base >=4.7 && <5
    , bytestring >=0.10
    -- , containers >=0.6.0
    , hspec
    , QuickCheck
  default-language: Haskell2010


