cabal-version:  2.2
name:           stype 
version:        0.20.0
description:    Please see the README on GitHub at <https://github.com/novisci/asclepias#readme>
homepage:       https://github.com/novisci/asclepias/#readme
bug-reports:    https://github.com/novisci/asclepias/issues
author:         Bradley Saul
maintainer:     bsaul@novisci.com
copyright:      NoviSci, Inc
category:       Data Science
synopsis:       Statistical types
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:

source-repository head
  type: git
  location: https://github.com/novisci/asclepias

library
  exposed-modules:
      Stype
      Stype.Aeson
      Stype.Numeric
      Stype.Numeric.Count
      Stype.Numeric.Continuous
      Stype.Numeric.Censored
      Stype.Categorical
      Stype.Categorical.Binary
      Stype.Categorical.Nominal
      Stype.Tests
  other-modules:
      Stype.Tests.Aeson
      Stype.Tests.Censored
  hs-source-dirs:
      src
  build-depends:
      aeson >= 2.0.3.0
    , base >=4.14 && <5
    , bytestring >= 0.11
    , semiring-simple == 1.0.0.1
    , tasty  == 1.4.1
    , tasty-hunit == 0.10.0.3
    , text >= 2.0 
  default-language: Haskell2010

test-suite stype-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      stype, base
  default-language: Haskell2010
