cabal-version:      2.4
name:               hasklepias-build-utils
version:            0.1.0.0
description: Just some utilities for working within the asclepias repo
author:             bsaul
maintainer:         bsaul@novisci.com
extra-source-files: CHANGELOG.md

executable cabal-name
    main-is:          Main.hs
    build-depends:    
          base ^>=4.14.3.0
        , Cabal >= 3.6
        , optparse-applicative == 0.16.1.0
    hs-source-dirs:   cabal-name
    default-language: Haskell2010
